# zero-to-production

./: .dockerignore  .gitignore  Cargo.toml  Makefile  docker-compose.yml  env.example
configuration/: local.yaml  production.yaml
docker/app/: Dockerfile
docker/postgres/: init_db.sh
src/: configuration.rs  error.rs  lib.rs  main.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: dto.rs  mod.rs  subscriptions.rs
tests/: health_check.rs
