[package]
name = "zero2prod"
version = "0.1.0"
authors = ["LukeMathWalker <rust@lpalmieri.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
anyhow = "1.0.66"
axum = "0.5.16"
claims = "0.7.1"
hyper = "0.14.23"
thiserror = "1.0.37"
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[dev-dependencies]
reqwest = "0.11"
