[package]
name = "zero2prod"
version = "0.1.0"
authors = ["LukeMathWalker <rust@lpalmieri.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
anyhow = "1.0.66"
axum = "0.6.1"
claims = "0.7.1"
hyper = "0.14.23"
thiserror = "1.0.37"
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.15", features = ["registry", "env-filter"] }
serde = { version = "1.0.147", features = ["derive"]}
config = "0.13.2"
chrono = "0.4.23"
uuid = { version = "1.2.2", features = ["v4"] }
tower-http = { version = "0.3.4", features = ["trace"] }
tracing-bunyan-formatter = "0.3.4"
derive_builder = "0.12.0"
once_cell = "1.16.0"
test-context = "0.1.4"
async-trait = "0.1.58"
dotenvy = "0.15.6"
secrecy = { version = "0.8.0", features = ["serde"] }
serde-aux = "4.1.2"
unicode-segmentation = "1.10.0"
validator = "0.16.0"
serde_json = "1.0.89"
axum-macros = "0.3.0"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate", "offline"]

[dev-dependencies]
reqwest = "0.11"
claims = "0.7.1"
fake = "2.5.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
rand_core = "0.6.4"
